refactor: modernize data holders to Java 17 records and enhance metric calculation safety
- Convert CiMetadata, FlakinessScore, Email, and internal holders to Java 17 records
- Add defensive copying in ExecutionMetrics.percentile to support immutable lists
- Clean up ApiClient invocation patterns in example tests
- Apply cleanups for pattern matching, final modifiers, and unused imports